--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </ul>
       </nav>
     </header>
+
     <main>
-      <header>
+      <header class="main-h">
         <h2 class="txt-hide">네이버 소개와 채용상황</h2>
         <section class="header-slides">
           <h3 class="slide">
@@ -37,7 +38,7 @@
             <div class="slide2">
               <em class="slide__tit2">수 많은 사용자의 목소리에서</em>
               <strong>내 일의 자부심과 무게를 느낍니다</strong>
-              <a href="javascript:void(0)">Naver에서 일한다는 것</a>
+              <a href="javascript:void(0)">MABER에서 일한다는 것</a>
             </div>
             <div class="slide1">
               <em class="slide__tit1">BE ON THE FAST TRACK</em>
@@ -45,6 +46,8 @@
               <a href="javascript:void(0)">지원하기</a>
             </div>
           </h3>
+          <button class="left-btn"></button>
+          <button class="right-btn"></button>
         </section>
         <ul class="category">
           <li>
@@ -118,8 +121,9 @@
               </li>
             </ul>
           </div>
+          
           <div class="list-container">
-            <h3>건강과 가족</h3>
+            <h3 class="second-tit">건강과 가족</h3>
             <ul>
               <li>
                 <a href="javascript:void(0)">
